Convert mozPersonalDictionary to use nsTHashTable Bug 224625, r=dwitte, sr=alecf